Fixed a bug
Fixed a bug to do with the scrollbar, Line 13

--- a/css/horizontal_timeline.2.0.css
+++ b/css/horizontal_timeline.2.0.css
@@ -10,11 +10,8 @@ Licensed under the MIT license
 Docs at http://horizontal-timeline.ycodetech.co.uk
 
 -------------------------------- */
-html, body {
-	/* Stop horizontal scrollbar from appearing/disappearing when the content slides across and changes. 
-	Also fixes the fixed flexbox elements from moving along with the transforms.*/
-	height: auto;
-	overflow: auto;
+body {
+	/* Stop horizontal scrollbar from appearing/disappearing when the content slides across and changes.*/
 	overflow-x: hidden;
 }
 .horizontal-timeline {
